v1.2 squash rootin' tootin' bugs and enable better button behavior

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
     color: black;
 }
 
-#bet {
+#bet,
+#hit {
     visibility: hidden;
 }
 
